--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -7,7 +7,9 @@ SRC+=  Cure.o Ice.o Character.o MateriaSource.o
 CC= c++
 HEADERS= 
 
+val = -ggdb3
 CPPFLAGS +=	-Wall -Werror -Wextra
+CPPFLAGS += -g $(val)
 # CPPFLAGS +=	-std=c++98
 
 all:$(NAME)
@@ -16,6 +18,8 @@ $(NAME): $(SRC)
 	$(CC) $(CPPFLAGS) -o $@ $^
 %.o:%.cpp
 	$(CC) -c $(CPPFLAGS) $< -o $@
+vgrind: all
+	valgrind --leak-check=full ./$(NAME)
 
 clean:
 	rm -rf $(SRC)
